--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   min-width: 150px;
 }
 
+th, td {
+  padding: 0.4rem 0.8rem;
+}
+
 /* accordion */
 .accordion, .accordion-content {
   width: 100%;
